--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="greeter">
-            <h2>Sayfamıza HOŞGELDİNİZ!</h2>
+            <h1>Sayfamıza Hoşgeldiniz!</h1>
         </div>
         <div class="logo">
             <a href="index.html"><img src="img/logo.jpg" alt="Tecno-Gündem Logo"></a>
@@ -41,56 +41,74 @@
     </nav>
 
     <main>
-    	<section class="latest-posts">
+        <section class="latest-posts">
             <h2>Son Paylaşılanlar</h2>
-        <table class="posts-table">
-         <tr>
-            <th>#</th>
-            <th>Başlık & Özet</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>
-                <strong><a href="deepseek.html">Deepseek R1 yapay zeka dünyasını salladı!</a></strong>
-                <p>Çinli yapay zeka şirketinin piyasayı kasıp kavuran çıkışı</p>
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>
-                <strong><a href="gta.html">GTA6 için yeni sızıntılar !</a></strong>
-                <p>Take Two Interactive'den bir çalışanın yaptığı sızıntılar gündem oldu.</p>
-            </td>
-        </tr>
-      </table>
-    </section>
+            <table class="posts-table">
+                <tr>
+                    <th>#</th>
+                    <th>Başlık & Özet</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>
+                        <article>
+                            <h3><a href="deepseek.html">Deepseek R1 yapay zeka dünyasını salladı!</a></h3>
+                            <p>Çinli yapay zeka şirketinin piyasayı kasıp kavuran çıkışı</p>
+                        </article>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>
+                        <article>
+                            <h3><a href="gta.html">GTA6 için yeni sızıntılar!</a></h3>
+                            <p>Take Two Interactive'den bir çalışanın yaptığı sızıntılar gündem oldu.</p>
+                        </article>
+                    </td>
+                </tr>
+            </table>
+        </section>
 
+        <section>
+          <h2>Öne Çıkan Video</h2>
+                       <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Hcreke9yVhM" frameborder="0" allowfullscreen></iframe>
+
+        </section>
     </main>
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-section">
-            <h3>Hakkımızda</h3>
-            <p>Tecno-Gündem, yapay zeka, donanım, yazılım ve oyun dünyasındaki en güncel gelişmeleri paylaşan bir platformdur.</p>
-        </div>
-        <div class="footer-section">
-            <h3>İletişim</h3>
-            <p>Email: <a href="mailto:info@tecno-gundem.com">info@tecno-gundem.com</a></p>
-            <p>Telefon: +90 555 555 55 55</p>
-        </div>
-        <div class="footer-section">
-            <h3>Bağlantılar</h3>
-            <ul>
-                <li><a href="#">Gizlilik Politikası</a></li>
-                <li><a href="#">Kullanım Şartları</a></li>
-                <li><a href="#">SSS</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2025 Tecno-Gündem. Tüm hakları saklıdır.</p>
-    </div>
-  </footer>
 
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>Hakkımızda</h3>
+                <p>Tecno-Gündem, yapay zeka, donanım, yazılım ve oyun dünyasındaki en güncel gelişmeleri paylaşan bir platformdur.</p>
+            </div>
+            <div class="footer-section">
+                <h3>İletişim</h3>
+                <p>Email: <a href="mailto:info@tecno-gundem.com">info@tecno-gundem.com</a></p>
+                <p>Telefon: +90 555 555 55 55</p>
+            </div>
+            <div class="footer-section">
+                <h3>Bağlantılar</h3>
+                <ul>
+                    <li><a href="#">Gizlilik Politikası</a></li>
+                    <li><a href="#">Kullanım Şartları</a></li>
+                    <li><a href="#">SSS</a></li>
+                </ul>
+                <ol>
+                    <li><a href="#">Sıkça Sorulan Sorular</a></li>
+                    <li><a href="#">Destek</a></li>
+                </ol>
+            </div>
+            <div class="footer-section">
+                <h4>Ekstra Bilgiler</h4>
+                <h5>Takipte Kalın</h5>
+                <h6>Sosyal medya hesaplarımız yakında burada olacak!</h6>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Tecno-Gündem. <span>Tüm hakları saklıdır.</span></p>
+        </div>
+    </footer>
 </body>
 
 </html>
