--- a/yazilim.html
+++ b/yazilim.html
@@ -43,6 +43,30 @@
     <main>
 
     </main>
+     <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-section">
+            <h3>Hakkımızda</h3>
+            <p>Tecno-Gündem, yapay zeka, donanım, yazılım ve oyun dünyasındaki en güncel gelişmeleri paylaşan bir platformdur.</p>
+        </div>
+        <div class="footer-section">
+            <h3>İletişim</h3>
+            <p>Email: <a href="mailto:info@tecno-gundem.com">info@tecno-gundem.com</a></p>
+            <p>Telefon: +90 555 555 55 55</p>
+        </div>
+        <div class="footer-section">
+            <h3>Bağlantılar</h3>
+            <ul>
+                <li><a href="#">Gizlilik Politikası</a></li>
+                <li><a href="#">Kullanım Şartları</a></li>
+                <li><a href="#">SSS</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2025 Tecno-Gündem. Tüm hakları saklıdır.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
